@@ -4,6 +4,7 @@ v2.8.9   - Made printout of ACES file loaded always display full path to it.
 	 - Bug fixed a hanging bug which would happen when looping from
 	   the last frame of a video.
 	 - Made Clear Cache work on videos, too.
+	 - Made .webm a valid video extension.
 
 v2.8.8   - Fixed some crashing and hanging bugs when playing
 	   backwards or scrubbing backwards.
